test/cases/compile_errors/capture_by_ref_switch.zig
test {
    switch (undefined) {
        .a => |*ident| {},
    }
}

// error
//
// :3:17: error: unused capture
